integrazione scripts analisi arianna

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -69,6 +69,133 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06c9bf4a",
+   "metadata": {},
+   "source": [
+    "## Estensione rete ciclabili"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57f8b695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili = gpd.read_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b357cfa6",
+   "metadata": {},
+   "source": [
+    "Provo a creare dei percorsi che hanno lo scopo di unire tutti i frammenti di ciclabili esistenti.\n",
+    "Quindi userò come \"poi\" tutti i nodi delle \"highway\"=cycleway"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbde9a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili_cycleway = gdf_ciclabili[gdf_ciclabili[\"highway\"] == \"cycleway\"]\n",
+    "gdf_point_ciclabili = []\n",
+    "for idx, row in gdf_ciclabili_cycleway.iterrows():\n",
+    "    gdf_point_ciclabili.append(Point(row.geometry.coords[0]))\n",
+    "    gdf_point_ciclabili.append(Point(row.geometry.coords[-1]))\n",
+    "gdf_point_ciclabili = gpd.GeoDataFrame(gdf_point_ciclabili, columns=[\"geometry\"], crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641257e7",
+   "metadata": {},
+   "source": [
+    "Faccio partire il calcolo dei percosi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37bed9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_list = [\n",
+    "    {\"gdf\":  gdf_point_ciclabili,\n",
+    "     \"tipo\": \"poi_ciclabili\"}\n",
+    "]\n",
+    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_EXTENDED_CICLABILI_CLEAN)\n",
+    "# Rimuoviamo gli archi artificiali che tanto in questo caso specifico sono archi di punti collegati con loro stessi\n",
+    "# Che quindi non rappresentano nulla, sono solo rumore\n",
+    "gdf_extended_ciclabili = gpd.read_file(PATH_EXTENDED_CICLABILI_CLEAN)\n",
+    "gdf_extended_ciclabili = gdf_extended_ciclabili[gdf_extended_ciclabili[\"artificial\"]==False]\n",
+    "gdf_extended_ciclabili.reset_index(drop=True).to_file(PATH_EXTENDED_CICLABILI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fe77965",
+   "metadata": {},
+   "source": [
+    "### Statistiche"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b029f61f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_extended_ciclabili = gpd.read_file(PATH_EXTENDED_CICLABILI_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e307b0",
+   "metadata": {},
+   "source": [
+    "1. Raggruppiamo per strade e vediamo i km per ogni tipologia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19eebf89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_extended_ciclabili_highway = gdf_extended_ciclabili.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"length\": lambda x: sum(x/1000)\n",
+    "    }).sort_values(by=\"length\", ascending=False)\n",
+    "print(gdf_extended_ciclabili_highway.head(6))\n",
+    "print(gdf_extended_ciclabili_highway[\"length\"].sum(), \"km\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5ff4dc4",
+   "metadata": {},
+   "source": [
+    "2. Calcoliamo i km nuovi da costruire (rimuoviamo cycleway che sono già costruite in teoria)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd86424",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(gdf_extended_ciclabili_highway.drop(\"cycleway\", axis=0).sum().values[0], \"km\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14c4b333",
    "metadata": {},
    "source": [
@@ -126,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -141,11 +268,16 @@
     "for idx, row in gdf_analisi_sport_mod.iterrows():\n",
     "    if not geometry_parchi.contains(row.geometry):\n",
     "        gdf_senza_parchi.append(row)\n",
-    "gdf_analisi_sport_mod = gpd.GeoDataFrame(gdf_senza_parchi, crs=CRS_GRAD)\n",
-    "\n",
-    "# Salviamo per test di visualizzazione su kepler\n",
-    "gdf_analisi_sport_mod.to_file(\"../Data/Clean/Analisi/sport_senza_parchi_con_pesi.geojson\")\n",
-    "\n",
+    "gdf_analisi_sport_mod = gpd.GeoDataFrame(gdf_senza_parchi, crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04596a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
     "gdf_analisi_sport_mod_most_highways = gdf_analisi_sport_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
     "    \"length\": lambda x: sum(x/1000)\n",
@@ -166,153 +298,311 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f06299f",
+   "id": "1e83a9c0",
    "metadata": {},
    "source": [
-    "## Unione Rete Ciclabile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "28321313",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_ciclabili = gpd.read_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING)"
+    "## Istruzione"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4040727e",
+   "id": "d3093a96",
    "metadata": {},
    "source": [
-    "Provo a creare dei percorsi che hanno lo scopo di unire tutti i frammenti di ciclabili esistenti.\n",
-    "Quindi userò come \"poi\" tutti i nodi delle \"highway\"=cycleway"
+    "Utilizzeremo i seguenti dati:\n",
+    "1. **Biblioteche**\n",
+    "2. **Scuole**\n",
+    "Saranno i nostri \"poi\", cioè \"Point of Interest\" che verranno aggiunti al Grafo della rete Ciclabile/Stradale per la ricerca di percorsi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "61f311c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_ciclabili_cycleway = gdf_ciclabili[gdf_ciclabili[\"highway\"] == \"cycleway\"]\n",
-    "gdf_point_ciclabili = []\n",
-    "for idx, row in gdf_ciclabili_cycleway.iterrows():\n",
-    "    gdf_point_ciclabili.append(Point(row.geometry.coords[0]))\n",
-    "    gdf_point_ciclabili.append(Point(row.geometry.coords[-1]))\n",
-    "gdf_point_ciclabili = gpd.GeoDataFrame(gdf_point_ciclabili, columns=[\"geometry\"], crs=CRS_GRAD)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f9fa5c9",
-   "metadata": {},
-   "source": [
-    "Faccio partire il calcolo dei percosi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e2285db0",
+   "execution_count": null,
+   "id": "c1ec5deb",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
-    "    {\"gdf\":  gdf_point_ciclabili,\n",
-    "     \"tipo\": \"poi_ciclabili\"}\n",
-    "]\n",
-    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=\"../Data/Clean/Analisi/extended_ciclabili.geojson\")\n",
-    "# Rimuoviamo gli archi artificiali che tanto in questo caso specifico sono archi di punti collegati con loro stessi\n",
-    "# Che quindi non rappresentano nulla, sono solo rumore\n",
-    "gdf_extended_ciclabili = gpd.read_file(\"../Data/Clean/Analisi/extended_ciclabili.geojson\")\n",
-    "gdf_extended_ciclabili = gdf_extended_ciclabili[gdf_extended_ciclabili[\"artificial\"]==False]\n",
-    "gdf_extended_ciclabili.reset_index(drop=True).to_file(\"../Data/Clean/Analisi/extended_ciclabili.geojson\", driver=\"GeoJSON\")"
+    "    {\"gdf\":  gpd.read_file(PATH_BIBLIOTECHE_CLEAN),\n",
+    "     \"tipo\": \"Biblioteche\",\n",
+    "     \"gdf\":  gpd.read_file(PATH_SCUOLE_CLEAN),\n",
+    "     \"tipo\": \"Scuole\"}\n",
+    "     ]\n",
+    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_ISTRUZIONE_CLEAN)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d07a64c4",
+   "id": "a41c8fc2",
    "metadata": {},
    "source": [
-    "### Statistiche"
+    "Analisi lunghezza strade create\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "cc5d7a44",
+   "execution_count": null,
+   "id": "c3735fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "  return ogr_read(\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdf_analisi_istruzione = gpd.read_file(PATH_ISTRUZIONE_CLEAN, driver= \"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7bb04ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_extended_ciclabili = gpd.read_file(\"../Data/Clean/Analisi/extended_ciclabili.geojson\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b15407e6",
-   "metadata": {},
-   "source": [
-    "1. Raggruppiamo per strade e vediamo i km per ogni tipologia"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "aeb1b498",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 length\n",
-      "highway                \n",
-      "cycleway     209.282437\n",
-      "footway       36.254350\n",
-      "residential   15.552589\n",
-      "secondary     13.979275\n",
-      "tertiary      11.675173\n",
-      "service        5.011441\n",
-      "308.9554463607366 km\n"
-     ]
-    }
-   ],
-   "source": [
-    "gdf_extended_ciclabili_highway = gdf_extended_ciclabili.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "# Eliminiamo connessioni \"artificiali\" usate per connettere i \"poi\" al grafo delle strade\n",
+    "gdf_analisi_istruzione_mod = gdf_analisi_istruzione[gdf_analisi_istruzione[\"artificial\"] != True]\n",
+    "\n",
+    "# Leggi i due POI\n",
+    "gdf_scuole = gpd.read_file(PATH_SCUOLE_CLEAN)\n",
+    "gdf_biblioteche = gpd.read_file(PATH_BIBLIOTECHE_CLEAN)\n",
+    "\n",
+    "# Unisci in un'unica geometria\n",
+    "geometry_poi = gpd.GeoSeries(\n",
+    "    gpd.pd.concat([gdf_scuole.geometry, gdf_biblioteche.geometry], ignore_index=True)\n",
+    ").union_all()\n",
+    "\n",
+    "# Filtra il GDF di partenza\n",
+    "gdf_senza_poi = []\n",
+    "for idx, row in gdf_analisi_istruzione_mod.iterrows():\n",
+    "    if not geometry_poi.contains(row.geometry):\n",
+    "        gdf_senza_poi.append(row)\n",
+    "\n",
+    "# Crea nuovo GeoDataFrame\n",
+    "gdf_analisi_istruzione_mod = gpd.GeoDataFrame(gdf_senza_poi, crs=CRS_GRAD)\n",
+    "\n",
+    "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
+    "gdf_analisi_istruzione_mod_most_highways = gdf_analisi_istruzione_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
     "    \"length\": lambda x: sum(x/1000)\n",
-    "    }).sort_values(by=\"length\", ascending=False)\n",
-    "print(gdf_extended_ciclabili_highway.head(6))\n",
-    "print(gdf_extended_ciclabili_highway[\"length\"].sum(), \"km\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eda24324",
-   "metadata": {},
-   "source": [
-    "2. Calcoliamo i km nuovi da costruire (rimuoviamo cycleway che sono già costruite in teoria)"
+    "    }).sort_values(by=\"length\", ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "c305dc84",
+   "execution_count": null,
+   "id": "f4d8f98d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stampiamo il risultato\n",
+    "print(gdf_analisi_istruzione_mod_most_highways)\n",
+    "print(f\"Tot: {gdf_analisi_istruzione_mod_most_highways[\"length\"].sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6dc0de2",
+   "metadata": {},
+   "source": [
+    "## Cultura e spettacolo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d00b6cd1",
+   "metadata": {},
+   "source": [
+    "Utilizzeremo i seguenti dati: \n",
+    "\n",
+    "1. **Musei**\n",
+    "2. **Cinema**\n",
+    "3. **Teatri**\n",
+    "\n",
+    "Saranno i nostri \"poi\", cioè \"Point of Interest\"\n",
+    "che verranno aggiunti al Grafo della rete \n",
+    "Ciclabile/Stradale per la ricerca di percorsi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf55f379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_list = [\n",
+    "    {\"gdf\":  gpd.read_file(PATH_MUSEI_CLEAN),\n",
+    "     \"tipo\": \"Musei\",\n",
+    "     \"gdf\":  gpd.read_file(PATH_CINEMA_CLEAN),\n",
+    "     \"tipo\": \"Cinema\", \n",
+    "     \"gdf\":  gpd.read_file(PATH_TEATRI_CLEAN),\n",
+    "     \"tipo\": \"Teatri\"}\n",
+    "     ]\n",
+    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_CULTURA_SPETTACOLO_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38d67835",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "99.67300939731115 km\n"
+      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "  return ogr_read(\n"
      ]
     }
    ],
    "source": [
-    "print(gdf_extended_ciclabili_highway.drop(\"cycleway\", axis=0).sum().values[0], \"km\")"
+    "gdf_analisi_cultura_spettacolo = gpd.read_file(PATH_CULTURA_SPETTACOLO_CLEAN, driver= \"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e7af660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminiamo connessioni \"artificiali\" usate per connettere i \"poi\" al grafo delle strade\n",
+    "gdf_analisi_cultura_spettacolo_mod = gdf_analisi_cultura_spettacolo[gdf_analisi_cultura_spettacolo[\"artificial\"] != True]\n",
+    "\n",
+    "# Leggi i due POI\n",
+    "gdf_musei = gpd.read_file(PATH_MUSEI_CLEAN)\n",
+    "gdf_teatri = gpd.read_file(PATH_TEATRI_CLEAN)\n",
+    "gdf_cinema = gpd.read_file(PATH_CINEMA_CLEAN)\n",
+    "\n",
+    "# Unisci in un'unica geometria\n",
+    "geometry_poi = gpd.GeoSeries(\n",
+    "    gpd.pd.concat([gdf_cinema.geometry, gdf_teatri.geometry, gdf_musei.geometry], ignore_index=True)\n",
+    ").union_all()\n",
+    "\n",
+    "# Filtra il GDF di partenza\n",
+    "gdf_senza_poi = []\n",
+    "for idx, row in gdf_analisi_cultura_spettacolo.iterrows():\n",
+    "    if not geometry_poi.contains(row.geometry):\n",
+    "        gdf_senza_poi.append(row)\n",
+    "\n",
+    "# Crea nuovo GeoDataFrame\n",
+    "gdf_analisi_cultura_spettacolo_mod = gpd.GeoDataFrame(gdf_senza_poi, crs=CRS_GRAD)\n",
+    "\n",
+    "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
+    "gdf_analisi_cultura_spettacolo_mod_most_highways = gdf_analisi_cultura_spettacolo_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"length\": lambda x: sum(x/1000)\n",
+    "    }).sort_values(by=\"length\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc3726e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stampiamo il risultato\n",
+    "print(gdf_analisi_cultura_spettacolo_mod_most_highways)\n",
+    "print(f\"Tot: {gdf_analisi_cultura_spettacolo_mod_most_highways[\"length\"].sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ced81c85",
+   "metadata": {},
+   "source": [
+    "## Sanità"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40d5d8a4",
+   "metadata": {},
+   "source": [
+    "Utilizzeremo i seguenti dati: \n",
+    "\n",
+    "1. **Ospedali**\n",
+    "\n",
+    "\n",
+    "Saranno i nostri \"poi\", cioè \"Point of Interest\"\n",
+    "che verranno aggiunti al Grafo della rete \n",
+    "Ciclabile/Stradale per la ricerca di percorsi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6b788aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_list = [\n",
+    "    {\"gdf\":  gpd.read_file(PATH_OSPEDALI_CLEAN),\n",
+    "     \"tipo\": \"Ospedali\"}\n",
+    "     ]\n",
+    "Graph_functions.auto_analysis_poi(gdf_list,PATH_GEOJSON=PATH_SANITA_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "447087ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "  return ogr_read(\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdf_analisi_ospedali = gpd.read_file(PATH_SANITA_CLEAN, driver= \"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cddb1238",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminiamo connessioni \"artificiali\" usate per connettere i \"poi\" al grafo delle strade\n",
+    "gdf_analisi_ospedali_mod = gdf_analisi_ospedali[gdf_analisi_ospedali[\"artificial\"] != True]\n",
+    "\n",
+    "# Eliminiamo i percorsi completamente contenuti all'interno dei \"poi\" poligonari: parchi\n",
+    "gdf = gpd.read_file(PATH_OSPEDALI_CLEAN)\n",
+    "geometry_parchi = gdf.union_all()\n",
+    "gdf_senza_poi = []\n",
+    "for idx, row in gdf_analisi_ospedali_mod.iterrows():\n",
+    "    if not geometry_parchi.contains(row.geometry):\n",
+    "        gdf_senza_poi.append(row)\n",
+    "gdf_analisi_ospedali_mod = gpd.GeoDataFrame(gdf_senza_poi, crs=CRS_GRAD)\n",
+    "\n",
+    "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
+    "gdf_analisi_ospedali_mod_most_highways = gdf_analisi_ospedali_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"length\": lambda x: sum(x/1000)\n",
+    "    }).sort_values(by=\"length\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6329b55c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stampiamo il risultato\n",
+    "print(gdf_analisi_ospedali_mod_most_highways)\n",
+    "print(f\"Tot: {gdf_analisi_ospedali_mod_most_highways[\"length\"].sum()}\")"
    ]
   },
   {
@@ -428,7 +718,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conteggi[\"point_etichetta\"] = conteggi.geometry.apply(lambda x: x.centroid)\n"
+    "conteggi[\"point_etichetta\"] = conteggi.geometry.apply(lambda x: x.centroid)"
    ]
   },
   {
@@ -447,7 +737,7 @@
    "outputs": [],
    "source": [
     "conteggi = gpd.GeoDataFrame(conteggi, geometry=\"geometry\", crs=CRS_GRAD)\n",
-    "conteggi.to_file(\"../Data/Clean/Analisi/score_municipi.geojson\", driver=\"GeoJSON\")"
+    "conteggi.to_file(PATH_SCORE_X_MUNICIPI, driver=\"GeoJSON\")"
    ]
   }
  ],
