non avevo salvato

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "57f8b695",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cbde9a58",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "37bed9f2",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b029f61f",
    "metadata": {},
    "outputs": [],
@@ -164,10 +164,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "19eebf89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 length\n",
+      "highway                \n",
+      "cycleway     209.282437\n",
+      "footway       36.254350\n",
+      "residential   15.552589\n",
+      "secondary     13.979275\n",
+      "tertiary      11.675173\n",
+      "service        5.011441\n",
+      "308.9554463607366 km\n"
+     ]
+    }
+   ],
    "source": [
     "gdf_extended_ciclabili_highway = gdf_extended_ciclabili.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
     "    \"length\": lambda x: sum(x/1000)\n",
@@ -186,10 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5cd86424",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.67300939731115 km\n"
+     ]
+    }
+   ],
    "source": [
     "print(gdf_extended_ciclabili_highway.drop(\"cycleway\", axis=0).sum().values[0], \"km\")"
    ]
@@ -217,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c774a8e6",
    "metadata": {},
    "outputs": [],
@@ -243,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
@@ -253,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -273,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "04596a5f",
    "metadata": {},
    "outputs": [],
@@ -286,10 +310,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0d0bf844",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              length\n",
+      "highway                             \n",
+      "footway                   170.089942\n",
+      "cycleway                   99.524474\n",
+      "residential                41.782885\n",
+      "tertiary                   21.247664\n",
+      "primary                     9.338757\n",
+      "secondary                   8.411177\n",
+      "service                     4.475873\n",
+      "pedestrian                  3.222769\n",
+      "path                        2.632774\n",
+      "track                       2.437919\n",
+      "footway service             1.057099\n",
+      "residential footway         0.813679\n",
+      "footway steps               0.689121\n",
+      "unclassified                0.599756\n",
+      "cycleway footway            0.484203\n",
+      "footway pedestrian          0.437563\n",
+      "residential cycleway        0.433831\n",
+      "residential pedestrian      0.312306\n",
+      "cycleway path               0.290587\n",
+      "footway path                0.286492\n",
+      "tertiary_link               0.211646\n",
+      "service pedestrian          0.189728\n",
+      "residential path            0.163217\n",
+      "unclassified primary        0.158020\n",
+      "secondary_link              0.157308\n",
+      "service path                0.150053\n",
+      "residential service         0.137565\n",
+      "residential secondary       0.127041\n",
+      "unclassified residential    0.116470\n",
+      "cycleway service            0.093506\n",
+      "primary_link                0.083006\n",
+      "living_street               0.070216\n",
+      "steps                       0.003908\n",
+      "Tot: 370.2305565671765\n"
+     ]
+    }
+   ],
    "source": [
     "# Stampiamo il risultato\n",
     "print(gdf_analisi_sport_mod_most_highways)\n",
@@ -317,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c1ec5deb",
    "metadata": {},
    "outputs": [],
@@ -341,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c3735fbc",
    "metadata": {},
    "outputs": [
@@ -349,7 +416,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
       "  return ogr_read(\n"
      ]
     }
@@ -360,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a7bb04ae",
    "metadata": {},
    "outputs": [],
@@ -394,10 +461,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f4d8f98d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              length\n",
+      "highway                             \n",
+      "footway                   103.275866\n",
+      "cycleway                   83.758404\n",
+      "residential                34.211914\n",
+      "tertiary                   23.518353\n",
+      "secondary                  12.496913\n",
+      "primary                     6.308517\n",
+      "track                       3.156910\n",
+      "service                     1.937384\n",
+      "pedestrian                  1.816089\n",
+      "path                        1.562238\n",
+      "footway steps               0.456524\n",
+      "unclassified                0.297007\n",
+      "secondary_link              0.224449\n",
+      "track service path          0.217139\n",
+      "tertiary_link               0.175544\n",
+      "residential cycleway        0.168887\n",
+      "residential footway         0.168512\n",
+      "footway pedestrian          0.158629\n",
+      "residential pedestrian      0.146171\n",
+      "cycleway path               0.133149\n",
+      "footway service             0.127157\n",
+      "cycleway footway            0.112020\n",
+      "primary_link                0.097783\n",
+      "cycleway service            0.093506\n",
+      "living_street               0.078276\n",
+      "residential steps           0.077341\n",
+      "footway platform            0.063848\n",
+      "steps                       0.031466\n",
+      "unclassified residential    0.026723\n",
+      "residential service         0.001870\n",
+      "Tot: 274.8985915091991\n"
+     ]
+    }
+   ],
    "source": [
     "# Stampiamo il risultato\n",
     "print(gdf_analisi_istruzione_mod_most_highways)\n",
@@ -430,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bf55f379",
    "metadata": {},
    "outputs": [],
@@ -448,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "38d67835",
    "metadata": {},
    "outputs": [
@@ -456,7 +563,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
       "  return ogr_read(\n"
      ]
     }
@@ -467,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9e7af660",
    "metadata": {},
    "outputs": [],
@@ -502,10 +609,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fbc3726e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             length\n",
+      "highway                            \n",
+      "cycleway                  32.205970\n",
+      "footway                   20.011504\n",
+      "residential                8.810256\n",
+      "tertiary                   4.989268\n",
+      "secondary                  4.598090\n",
+      "primary                    1.666067\n",
+      "pedestrian                 0.914740\n",
+      "footway steps              0.381345\n",
+      "service                    0.265643\n",
+      "unclassified               0.204832\n",
+      "secondary_link             0.172719\n",
+      "residential cycleway       0.116689\n",
+      "residential pedestrian     0.097656\n",
+      "primary_link               0.082050\n",
+      "footway service            0.078886\n",
+      "unclassified residential   0.066621\n",
+      "cycleway footway           0.058601\n",
+      "path                       0.001734\n",
+      "Tot: 74.7226731089275\n"
+     ]
+    }
+   ],
    "source": [
     "# Stampiamo il risultato\n",
     "print(gdf_analisi_cultura_spettacolo_mod_most_highways)\n",
@@ -537,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c6b788aa",
    "metadata": {},
    "outputs": [],
@@ -551,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "447087ac",
    "metadata": {},
    "outputs": [
@@ -559,7 +694,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
       "  return ogr_read(\n"
      ]
     }
@@ -570,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "cddb1238",
    "metadata": {},
    "outputs": [],
@@ -595,10 +730,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "6329b55c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           length\n",
+      "highway                          \n",
+      "cycleway                39.189874\n",
+      "footway                 15.456106\n",
+      "tertiary                 8.819226\n",
+      "residential              4.817837\n",
+      "secondary                4.593407\n",
+      "primary                  4.326607\n",
+      "service                  2.566652\n",
+      "path                     0.572301\n",
+      "pedestrian               0.542666\n",
+      "track                    0.516093\n",
+      "unclassified             0.281732\n",
+      "footway steps            0.187148\n",
+      "residential secondary    0.146541\n",
+      "residential pedestrian   0.146171\n",
+      "track service            0.126378\n",
+      "residential path         0.088589\n",
+      "cycleway footway         0.079023\n",
+      "tertiary_link            0.050109\n",
+      "primary_link             0.012722\n",
+      "Tot: 82.51918564502445\n"
+     ]
+    }
+   ],
    "source": [
     "# Stampiamo il risultato\n",
     "print(gdf_analisi_ospedali_mod_most_highways)\n",
@@ -615,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e8b3410e",
    "metadata": {},
    "outputs": [],
@@ -647,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "2287bae9",
    "metadata": {},
    "outputs": [],
@@ -669,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f9e68e12",
    "metadata": {},
    "outputs": [],
@@ -692,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9205ef0d",
    "metadata": {},
    "outputs": [],
@@ -713,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "a4eed437",
    "metadata": {},
    "outputs": [],
@@ -731,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "bf0a160b",
    "metadata": {},
    "outputs": [],
